--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
-subtitle: ''
-description: ''
+title: de0rg
+subtitle: 'Community Regeneration Lab'
+description: 'ReConnect Communities'
 keywords:
-author: John Doe
+author: de0rg
 language: en
 timezone: ''
 
