--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: de0rg
 subtitle: 'Community Regeneration Lab'
-description: 'ReConnect Communities'
+description: 'ReConnect Communities 社群再生'
 keywords:
 author: de0rg
 language: en
