--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: de0rg
+title: "de0rg 社群再生"
 subtitle: 'Community Regeneration Lab'
 description: 'ReConnect Communities 社群再生'
 keywords:
