--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "hexo-renderer-marked": "^6.0.0",
     "hexo-renderer-stylus": "^3.0.0",
     "hexo-server": "^3.0.0",
-    "hexo-theme-butterfly": "git+https://github.com/de0rg/hexo-theme-butterfly.git",
+    "hexo-theme-butterfly": "github:de0rg/hexo-theme-butterfly",
     "hexo-theme-landscape": "^1.0.0"
   }
 }
